@@ -186,6 +186,7 @@ x_MailingList = http://dzil.org/#mailing-list
 
 [MungeFile::WithDataSection]    ; TODO could be just [MungeFile]
 file = lib/Dist/Zilla/MintingProfile/Author/ETHER.pm
+file = share/profiles/default/profile.ini
 file = share/profiles/github/profile.ini
 
 [Test::CheckBreaks]
